# raytracer

./: .clang-tidy  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  conanfile.py
cmake/: CompilerDefines.cmake  FindBreatheApiDoc.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
include/: camera.h  color.h  constants.h  conversion.h  hittable.h  hittablelist.h  image.h  material.h  matrix.h  ray.h  sphere.h  threadpool.h  threadsafequeue.h  timer.h  utility.h
src/: CMakeLists.txt  camera.cpp  color.cpp  hittable.cpp  hittablelist.cpp  image.cpp  main.cpp  material.cpp  ray.cpp  sphere.cpp  threadpool.cpp  utility.cpp
tests/: CMakeLists.txt
